tests/errors/sem5.kt
//undeclared variable
fun main() {
    println(variable)
}